# hsalgos

./: Readme.md  hsalgos.cabal  longestedgepathindag.cpp  stack.yaml
app/: Main.hs
bench/: QuickSort.hs
cpp/: LongestEdgePathDag.cpp
profs/100/: hsalgos-exe.aux  hsalgos-exe.hp  hsalgos-exe.prof  hsalgos-exe.ps  s.txt
profs/100/force/hy/: hsalgos-exe.aux  hsalgos-exe.hp  hsalgos-exe.ps
profs/100/hd/: hsalgos-exe.aux  hsalgos-exe.hp  hsalgos-exe.ps
profs/100/hy/: hsalgos-exe.aux  hsalgos-exe.hp  hsalgos-exe.prof  hsalgos-exe.ps
profs/100/retainer/: hsalgos-exe.aux  hsalgos-exe.hp  hsalgos-exe.prof  hsalgos-exe.ps
profs/1000/force/hd/: hsalgos-exe.aux  hsalgos-exe.hp  hsalgos-exe.ps
profs/200/: hsalgos-exe.aux  hsalgos-exe.hp  hsalgos-exe.prof  hsalgos-exe.ps  s.txt
profs/200/force/hd/: hsalgos-exe.aux  hsalgos-exe.hp  hsalgos-exe.ps
profs/300/: hsalgos-exe.aux  hsalgos-exe.hp  hsalgos-exe.prof  hsalgos-exe.ps
profs/400/: hsalgos-exe.aux  hsalgos-exe.hp  hsalgos-exe.prof  hsalgos-exe.ps
profs/500/force/hd/: hsalgos-exe.aux  hsalgos-exe.hp  hsalgos-exe.ps
profs/new/1000/: hsalgos-exe.aux  hsalgos-exe.hp  hsalgos-exe.ps
profs/new/1000/force/: hsalgos-exe.aux  hsalgos-exe.hp  hsalgos-exe.ps
profs/new/1000/latest/: hsalgos-exe.aux  hsalgos-exe.hp  hsalgos-exe.ps
profs/new/1000/noforce/: hsalgos-exe.aux  hsalgos-exe.hp  hsalgos-exe.ps
profs/new/1000/noforce/lessbangs/: hsalgos-exe.aux  hsalgos-exe.hp  hsalgos-exe.ps
src/: DataKinds.hs  DepthFirstSearch.hs  DivideAndConquer.hs  Fibonacci.hs  LongestEdgePathInDAG.hs
test/: DepthFirstSearchTest.hs  DivideAndConquerTest.hs  Spec.hs
