name:                hsalgos
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/ashishnegi/hsalgos#readme
license:             BSD3
license-file:        LICENSE
author:              Ashish Negi
maintainer:          ashishnegi33@gmail.com
copyright:           Copyright: (c) 2016-* Ashish Negi
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Fibonacci
                     , DivideAndConquer
                     , DepthFirstSearch
                     , LongestEdgePathInDAG
                     , DataKinds
  build-depends:       base >= 4.7 && < 5
                     , matrix
                     , containers
                     , text
                     , deepseq
  default-language:    Haskell2010

executable hsalgos-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hsalgos
  default-language:    Haskell2010

test-suite hsalgos-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hsalgos
                     , QuickCheck
                     , hspec
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ashishnegi/hsalgos
